@@ -8,12 +8,25 @@ class	ImportForm(forms.Form):
 	file  = forms.FileField()
 
 class	OrgMainForm(forms.ModelForm):
-	egruldate	= forms.DateField(input_formats=['%d.%m.%Y', '%d/%m/%Y'], widget=forms.widgets.DateTimeInput(format='%d.%m.%Y'))
-	sroregdate	= forms.DateField(input_formats=['%d.%m.%Y', '%d/%m/%Y'], widget=forms.widgets.DateTimeInput(format='%d.%m.%Y'))
-	paydate		= forms.DateField(input_formats=['%d.%m.%Y', '%d/%m/%Y'], widget=forms.widgets.DateTimeInput(format='%d.%m.%Y'))
+	egruldate	= forms.DateField(input_formats=['%d.%m.%Y', '%d/%m/%Y'], widget=forms.widgets.DateTimeInput(format='%d.%m.%Y'), label='Дата регистрации в ЕГРЮЛ')
+	sroregdate	= forms.DateField(input_formats=['%d.%m.%Y', '%d/%m/%Y'], widget=forms.widgets.DateTimeInput(format='%d.%m.%Y'), label='Дата регистрации в СРО')
+	paydate		= forms.DateField(input_formats=['%d.%m.%Y', '%d/%m/%Y'], widget=forms.widgets.DateTimeInput(format='%d.%m.%Y'), label='Дата оплаты взноса')
 	class	Meta:
 		model = Org
 		exclude = ('okveds', 'events', 'stuffs', 'files')
+
+class	OrgLicenseForm(forms.ModelForm):
+	datefrom	= forms.DateField(input_formats=['%d.%m.%Y', '%d/%m/%Y'], widget=forms.widgets.DateTimeInput(format='%d.%m.%Y'), label='Действует с')
+	datedue		= forms.DateField(input_formats=['%d.%m.%Y', '%d/%m/%Y'], widget=forms.widgets.DateTimeInput(format='%d.%m.%Y'), label='Действительна до')
+	class	Meta:
+		model = OrgLicense
+		fields = ('regno', 'datefrom', 'datedue',)
+
+class	OrgInsuranceForm(forms.ModelForm):
+	insdate		= forms.DateField(input_formats=['%d.%m.%Y', '%d/%m/%Y'], widget=forms.widgets.DateTimeInput(format='%d.%m.%Y'), label='Дата выдачи свидетельства')
+	class	Meta:
+		model = OrgInsurance
+		fields = ('insurer', 'insno', 'insdate', 'insum')
 
 class	OrgPhoneForm(forms.ModelForm):
 	class	Meta:
